# itis-TEG

./: README.md  tools.txt
src/: __init__.py
src/1. Intro/: 1_llm_basics.py  2_Your_own_chatbot.py  README.md  notebook.ipynb  pyproject.toml
src/2. Models/1. Embeddings/: .env.example  1. embeddings_basics.py  README.md  notebook_1.ipynb  pyproject.toml
src/2. Models/2. LLMs/: 1. OpenAI - analyze the response object.py  2. Claude - analyze the response object.py  3. Different models with LangChain.py  notebook_2.ipynb  pyproject.toml
src/3. Retrieval Augmented Generation/: README.md  notebook_1.ipynb  notebook_2.ipynb  pyproject.toml
src/3. Retrieval Augmented Generation/01_basic_rag/: 2. minimal_rag_with_chunking.py
src/3. Retrieval Augmented Generation/02_vector_stores/: 1_in_memory.py  2_chroma_vectorestore.py  3_faiss_vectorestore.py
src/3. Retrieval Augmented Generation/02_vector_stores/chroma_db/: chroma.sqlite3
src/3. Retrieval Augmented Generation/02_vector_stores/faiss_index/: index.faiss  index.pkl
src/3. Retrieval Augmented Generation/04_advanced_retrieval/: 1_metadata_filtering.py  2_hybrid_search.py  3_query_expansion.py  4_reranking.py
src/3. Retrieval Augmented Generation/04_advanced_retrieval/data/: ground_truth_dataset.json
src/3. Retrieval Augmented Generation/05_rag_evaluation/: 1. RAGAS_Naive_RAG.py
src/3. Retrieval Augmented Generation/05_rag_evaluation/multi_rag_evaluation/: main.py
src/3. Retrieval Augmented Generation/06_GraphRAG/: 0_setup.py  1_generate_data.py  2_data_to_knowledge_graph.py  3_query_knowledge_graph.py  4_naive_rag_cv.py  5_compare_systems.py  docker-compose.yml
src/4. Graphs/: .env.example  1_simple graph.py  2_parallel_processes.py  3_map_reduce.py  README.md  notebook.ipynb  pyproject.toml
src/5. Tools and Agents/: .env.example
src/5. Tools and Agents/1_basic_agents/: .env.example  01_openai_function_calling.py  02_langchain_tools_intro.py  03_langgraph_react_agent.py  README.md  pyproject.toml
src/5. Tools and Agents/2_complex_agents/: .env.example  01_graph_based_agent.py  README.md  langgraph.json  pyproject.toml
src/5. Tools and Agents/2_complex_agents/multi_tool_agent_in_studio/: README.md  agent.py  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/: README.md
src/5. Tools and Agents/3_multi_agent_systems/1. multi-agent-react/: README.md  agent.py  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/2_research_assistant/: .env.example  README.md  agent.py  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/2_research_assistant/config/: prompts.toml
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_cli/: README.md  __main__.py  push_notification_listener.py  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/: README.md  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/a2a-python-sdk/: .ruff.toml  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/a2a-python-sdk/tests/: test_types.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/agents/: README.md
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/agents/langgraph/: __main__.py  agent.py  pyproject.toml  task_manager.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/agents/semantickernel/: __main__.py  agent.py  pyproject.toml  task_manager.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/common/client/: __init__.py  card_resolver.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/common/server/: server.py  task_manager.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/frontend/: main.py  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/frontend/components/: agent_list.py  api_key_dialog.py  async_poller.js  async_poller.py  chat_bubble.py  conversation.py  conversation_list.py  dialog.py  event_viewer.py  form_render.py  header.py  page_scaffold.py  poller.py  side_nav.py  task_card.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/frontend/pages/: agent_list.py  home.py  settings.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/hosts/: README.md
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/A2A_frontend/hosts/multiagent/: README.md  host_agent.py  pyproject.toml  remote_agent_connection.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/standalone agents/A2A_standalone_agent_arxiv/: agent.py  agent_tests.py  pyproject.toml  task_manager.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/standalone agents/A2A_standalone_agent_arxiv/common/: types.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/standalone agents/A2A_standalone_agent_math/: README.md  __main__.py  agent.py  agent_config.toml  agent_tests.py
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/standalone agents/A2A_standalone_agent_tavily/: __main__.py  agent.py  agent_tests.py  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/standalone agents/A2A_standalone_agent_weather/: __main__.py  agent.py  agent_tests.py  pyproject.toml
src/5. Tools and Agents/3_multi_agent_systems/3_Google_A2A_protocol/standalone agents/A2A_standalone_agent_wikipedia/: README.md  __main__.py  agent.py  pyproject.toml
src/6. MCP/: README.md  pyproject.toml
src/6. MCP/arxiv_server/: arxiv.py  pyproject.toml
src/6. MCP/math_server/: math_server.py  pyproject.toml
src/6. MCP/tavily_server/: pyproject.toml  tavily.py
src/6. MCP/weather_server/: pyproject.toml  weather.py
src/6. MCP/wikipedia_server/: pyproject.toml  wikipedia.py
(+39 files in other folders)
