[project]
name = "2-1-embeddings"
version = "0.1.1"
description = "Experiments with embeddings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "seaborn>=0.13.2",
    "python-dotenv>=1.2.1",
    "openai>=2.21.0",
    "scikit-learn>=1.8.0",
]
