[project]
name = "5-1basic-agents"
version = "1.0.0"
description = "Foundation concepts for AI agents and tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain>=0.3.27",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []
