[project]
name = "6-weather-server"
version = "1.0.0"
description = "MCP weather server using OpenWeatherMap API"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
