[project]
name = "5-3-2-react-agents"
version = "1.0.0"
description = "A multi-agent system built using the ReAct pattern, designed for execution in LangGraph Studio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.16",
    "langchain>=0.3.25",
    "langgraph-api>=0.4.29",
    "langgraph-cli[inmem]>=0.2.10",
    "langgraph-sdk>=0.2.9",
    "langgraph-supervisor>=0.0.22",
    "langgraph>=0.4.3",
    "openai>=1.78.1",
    "pip>=25.1.1",
    "pykernel>=0.1.6",
    "pyowm>=3.3.0",
    "setuptools>=80.7.1",
    "wikipedia>=1.4.0",
]
