[project]
name = "a2a-semantic-kernel"
version = "1.0.0"
description = "Leverage Semantic Kernel Agents using the A2A protocol."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-samples",
    "semantic-kernel>=1.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
a2a-samples = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
