[project]
name = "a2a-sample-client-multiagent"
version = "1.0.0"
description = "Google ADK-based host agent that can communicate with other agents over the A2A protocol."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-samples",
    "google-adk>=0.0.3",
    "google-genai>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
a2a-samples = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
